baml_language/crates/baml_tests/snapshots/compiles/generic_match_typevar_arm/baml_tests__compiles__generic_match_typevar_arm__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.unwrap_or(o: Opt<T> | Non, default: T) -> T {
    // Locals:
    let _0: T // _0 // return
    let _1: Opt<T> | Non // o // param
    let _2: T // default // param
    let _3: bool
    let _4: Opt<T> // s

    bb0: {
        _3 = is_type(copy _1, Opt<#0?>);
        branch copy _3 -> [bb2, bb1];
    }

    bb1: {
        _0 = copy _2;
        goto -> bb3;
    }

    bb2: {
        _4 = copy _1;
        _0 = copy _4.0;
        goto -> bb3;
    }

    bb3: {
        return;
    }
}
