baml_language/crates/baml_tests/snapshots/compiles/generic_match_typevar_arm/baml_tests__compiles__generic_match_typevar_arm__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.Opt {
  value: T
}
class user.Non {
}
function user.unwrap_or<T>(o: user.Opt<T> | user.Non, default: T) -> T throws never {
  { : T
    match (o : user.Opt<T> | user.Non) : T
      s: Opt<T> =>
        s.value : T
      _ =>
        default : T
  }
}
class user.Opt$stream {
  value: T | null
}
class user.Non$stream {
}
